--- a/css/estilos.css
+++ b/css/estilos.css
@@ -407,6 +407,41 @@ summary{
 .artículo h2{
 	text-align:center;
 }
+/*MÁS ENTRADAS*/
+.más-entradas{
+	position:relative;
+	display:flex;
+	padding-top:4em;
+	gap:1em;
+	justify-content: center;
+	align-items: flex-start;
+}
+.más-entradas h2{
+	position:absolute;
+	top:0;
+	left:0;
+	width:max-content;
+	max-width: 100%;
+}
+.más-entradas article{
+	width:25%;
+	max-width:20em;
+	cursor: pointer;
+	border:1px solid var(--color-borde);
+	background-color:rgba(29,29,31,.7);
+}
+.más-entradas h3{
+	margin-bottom:0;
+	border-bottom:1px solid var(--color-borde);
+	padding-bottom:5px;
+	cursor:inherit;
+}
+.más-entradas footer{
+	text-align:center;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
 /*PIE*/
 body > footer{
 	text-align:center;
