--- a/css/estilos.css
+++ b/css/estilos.css
@@ -426,6 +426,7 @@ summary{
 .más-entradas article{
 	width:25%;
 	max-width:20em;
+	min-width:330px;
 	cursor: pointer;
 	border:1px solid var(--color-borde);
 	background-color:rgba(29,29,31,.7);
