--- a/css/estilos.css
+++ b/css/estilos.css
@@ -415,6 +415,8 @@ summary{
 	gap:1em;
 	justify-content: center;
 	align-items: flex-start;
+	border-top: 1px solid var(--color-borde);
+	margin-top: .5em;
 }
 .más-entradas h2{
 	position:absolute;
@@ -432,10 +434,11 @@ summary{
 	background-color:rgba(29,29,31,.7);
 }
 .más-entradas h3{
-	margin-bottom:0;
+	margin:4px 0 0;
 	border-bottom:1px solid var(--color-borde);
 	padding-bottom:5px;
 	cursor:inherit;
+	text-align:center;
 }
 .más-entradas footer{
 	text-align:center;
