--- a/css/estilos.css
+++ b/css/estilos.css
@@ -170,6 +170,10 @@ time{
 	padding:.25em 1rem 0;
 	font-size:x-small;
 }
+.video video{
+	margin: 0 auto;
+	max-height: calc(100vh - 5rem);
+}
 .gfycat{
 	position:relative;
 	overflow:hidden;
