FIX: video background

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -186,11 +186,12 @@ time{
 	right: 300px;
 	border-radius: 3px;
 	border-right: 1px solid var(--color-borde);
-	opacity:.5;
+	z-index:0;
 }
 .video video{
 	margin: 0 auto;
 	max-height: calc(100vh - 5rem);
+	z-index:1;
 }
 .gfycat{
 	position:relative;
